--- a/src/static/stylesheets/variables/colors.scss
+++ b/src/static/stylesheets/variables/colors.scss
@@ -7,10 +7,11 @@ $color-text: #f0f0f0;
 $color-border: #3a3a3a;
 $color-border-active: #666;
 $color-border-dark: #2a2a2a;
-$color-rail: #464646;
+$color-clip-rail: #05283b;
+$color-rail: #51515a;
 $color-rail-background: #000;
 $color-accent: #0c89c7;
 $color-accent-dark: #085d87;
-$color-accent-seek-inactive: #031e2b;
+$color-accent-seek-inactive: #042637;
 $color-accent-highlight: #0ea5ef;
 $color-error: #e33;
