--- a/src/static/stylesheets/menu.scss
+++ b/src/static/stylesheets/menu.scss
@@ -1,5 +1,6 @@
 .menu-container {
   background-color: $color-background;
+  max-height: 75vh;
   min-height: 500px;
   padding: $elv-spacing-s 0 0;
 
