--- a/src/static/stylesheets/clips.scss
+++ b/src/static/stylesheets/clips.scss
@@ -32,7 +32,7 @@
 
 .clip-bin-container {
   max-height: 100%;
-  max-width: 300px !important;
+  max-width: 300px;
   width: 250px;
 }
 
@@ -41,7 +41,7 @@
   height: 100%;
   max-height: 100%;
   overflow-y: auto;
-  padding: $elv-spacing-xs $elv-spacing-xs;
+  padding: $elv-spacing-xs;
   width: 100%;
 }
 
@@ -164,7 +164,7 @@
   .clip-timeline-seek-handle {
     color: $color-accent-highlight;
     margin-left: -7px;
-    padding: 3px 0 0 0 ;
+    padding: 3px 0 0;
   }
 }
 
