--- a/src/static/stylesheets/assets.scss
+++ b/src/static/stylesheets/assets.scss
@@ -2,7 +2,7 @@ $grid-icon-width: 15rem;
 
 .assets-page {
   flex: 1 1 auto;
-  padding: $elv-spacing-m;
+  padding: 0 $elv-spacing-m $elv-spacing-m;
 }
 
 .assets-page-header {
@@ -11,6 +11,7 @@ $grid-icon-width: 15rem;
   font-size: $elv-font-xl;
   font-weight: normal;
   height: 4rem;
+  position: relative;
 
   .back-button {
     margin-right: $elv-spacing-s;
@@ -35,7 +36,10 @@ $grid-icon-width: 15rem;
     align-items: center;
     display: flex;
     justify-content: center;
+    max-width: 100%;
+    padding: 0 $elv-spacing-xs;
     position: relative;
+    word-break: break-all;
   }
 
   .tag-icon {
@@ -66,14 +70,14 @@ $grid-icon-width: 15rem;
     background-color: $color-background-black;
     display: flex;
     justify-content: center;
-    max-height: 70vh;
-    min-height: 70vh;
+    max-height: 60vh;
+    min-height: 60vh;
     position: relative;
 
     canvas,
     img {
       height: 100%;
-      max-height: 70vh;
+      max-height: 60vh;
       max-width: 100%;
       object-fit: contain;
       position: absolute;
@@ -95,5 +99,73 @@ $grid-icon-width: 15rem;
     .additional-tag {
       color: $elv-color-text-lightest;
     }
+  }
+}
+
+.asset-sort-filter {
+  align-items: center;
+  display: flex;
+  height: 2rem;
+  position: absolute;
+  right: 0;
+
+  .asset-filter-button {
+    height: 100%;
+    margin-right: $elv-spacing-xxs;
+    padding: $elv-spacing-xxs;
+    width: 2rem;
+
+    &.active,
+    &:hover {
+      background-color: $color-background-active;
+    }
+  }
+}
+
+.asset-filter {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  position: relative;
+
+  input {
+    background: $color-background-active;
+    border: $color-border-active;
+    color: $color-foreground;
+    font-size: $elv-font-xl;
+    height: 100%;
+    padding: 0 $elv-spacing-xs;
+    width: 100%;
+  }
+
+  .asset-filter-clear {
+    height: $elv-spacing-s;
+    position: absolute;
+    right: $elv-spacing-xxs;
+    width: $elv-spacing-s;
+  }
+}
+
+.asset-tags {
+  margin-bottom: $elv-spacing-xl;
+
+  h3 {
+    margin: $elv-spacing-xs 0;
+  }
+}
+
+.asset-category-tags {
+  display: flex;
+  flex-wrap: wrap;
+
+  .asset-tag {
+    @include elv-ellipsis;
+    border-radius: $elv-spacing-xxs;
+    color: $elv-color-text-white;
+    cursor: pointer;
+    margin-bottom: $elv-spacing-xs;
+    margin-right: $elv-spacing-xs;
+    max-width: 10rem;
+    padding: $elv-spacing-xs $elv-spacing-s;
   }
 }
