--- a/src/static/stylesheets/variables/colors.scss
+++ b/src/static/stylesheets/variables/colors.scss
@@ -4,6 +4,7 @@ $color-background-black: #000;
 $color-background-modal: rgba(0, 0, 0, 0.7);
 $color-foreground: #acacac;
 $color-text: #f0f0f0;
+$color-text-dark: #a1a1a1;
 $color-border: #3a3a3a;
 $color-border-active: #666;
 $color-border-dark: #2a2a2a;
