Fix segment download button

--- a/src/static/stylesheets/tracks.scss
+++ b/src/static/stylesheets/tracks.scss
@@ -241,6 +241,7 @@ $preview-track-height: 5rem;
 
 .toggle-tracks {
   justify-content: center;
+  margin-bottom: $elv-spacing-l;
 }
 
 $slider-height: 12px;
