--- a/src/static/stylesheets/tracks.scss
+++ b/src/static/stylesheets/tracks.scss
@@ -34,6 +34,7 @@ $preview-track-height: 5rem;
 .track-lane {
   display: flex;
   height: $track-height;
+  min-height: $track-height;
 
   .-elv-slider {
     .-elv-slider-mark {
