--- a/src/static/stylesheets/entry.scss
+++ b/src/static/stylesheets/entry.scss
@@ -34,6 +34,12 @@
   }
 
   .entries-filter {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    border-bottom: 1px solid $elv-color-darkergray;
+    box-shadow: 0 0 5px $elv-color-darkergray;
+
     input {
       background-color: $elv-color-black;
       border: 1px solid $elv-color-black;
