Add support for clip download and offering selection ; Various fixes and updates

--- a/src/static/stylesheets/tracks.scss
+++ b/src/static/stylesheets/tracks.scss
@@ -20,7 +20,6 @@ $preview-track-height: 5rem;
   pointer-events: none;
   position: absolute;
   width: 4px;
-  z-index: 100;
 
   .track-time-handle {
     border-radius: 100%;
@@ -176,6 +175,7 @@ $preview-track-height: 5rem;
 }
 
 .track-label-clickable {
+  background-color: $color-background;
   cursor: pointer;
 
   &:hover {
