Handle overlapping clip in/out controls

--- a/src/static/stylesheets/video.scss
+++ b/src/static/stylesheets/video.scss
@@ -80,13 +80,13 @@
 
   .clip-in-handle {
     border-right: 0;
-    padding-right: $elv-spacing-xs;
+    padding-right: $elv-spacing-xxs;
   }
 
   .clip-out-handle {
     border-left: 0;
-    margin-left: -10px;
-    padding-left: $elv-spacing-xs;
+    margin-left: -5px;
+    padding-left: $elv-spacing-xxs;
   }
 
   .seek-handle {
