Set relative position on .checkbox

--- a/src/static/stylesheets/defaults.scss
+++ b/src/static/stylesheets/defaults.scss
@@ -180,6 +180,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 
   &-xs {
     height: $elv-font-xxs;
