--- a/src/static/stylesheets/header.scss
+++ b/src/static/stylesheets/header.scss
@@ -135,19 +135,21 @@ header {
 }
 
 .save-modal-container {
-  form.-elv-form {
-    width: 850px;
+  form {
+    &.-elv-form {
+      width: 850px;
+    }
   }
 
   .confirm-message,
   .radio-label {
-    margin: 1rem 0;
     line-height: 1.5;
+    margin: 1rem 0;
   }
 
   .radio-item {
-    margin-left: 1rem;
     margin-bottom: 1rem;
+    margin-left: 1rem;
   }
 
   section {
@@ -160,10 +162,10 @@ header {
 
   header,
   .table-row {
-    display: flex;
-    gap: 1rem;
-    padding: 0.5rem 1rem;
     align-items: center;
+    display: flex;
+    gap: 1rem; // sass-lint:disable-line no-misspelled-properties
+    padding: 0.5rem 1rem;
   }
 
   .table-col {
@@ -180,12 +182,14 @@ header {
       background-color: $elv-color-bg-dark;
     }
 
-    .table-row:nth-child(odd) {
-      background-color: rgba($color-background-modal, 0.6)
-    }
+    .table-row {
+      &:nth-child(odd) {
+        background-color: $color-background-modal-light;
+      }
 
-    .table-row:nth-child(even) {
-      background-color: rgba($color-background-modal, 0.1);
+      &:nth-child(even) {
+        background-color: $color-background-modal-light-2;
+      }
     }
   }
 }
