--- a/src/static/stylesheets/variables/colors.scss
+++ b/src/static/stylesheets/variables/colors.scss
@@ -2,6 +2,8 @@ $color-background: #131315;
 $color-background-active: #2c2a28;
 $color-background-black: #000;
 $color-background-modal: rgba(0, 0, 0, 0.7);
+$color-background-modal-light: rgba($color-background-modal, 0.6);
+$color-background-modal-light-2: rgba($color-background-modal, 0.1);
 $color-foreground: #acacac;
 $color-text: #f0f0f0;
 $color-text-dark: #a1a1a1;
