Update asset handling to account for missing metadata

--- a/src/static/stylesheets/assets.scss
+++ b/src/static/stylesheets/assets.scss
@@ -47,7 +47,7 @@ $grid-icon-width: 15rem;
     display: flex;
     justify-content: center;
     max-width: 100%;
-    padding: 0 $elv-spacing-xs;
+    padding: 0 $elv-spacing-l 0 $elv-spacing-xs;
     position: relative;
     word-break: break-all;
   }
