--- a/src/static/stylesheets/video.scss
+++ b/src/static/stylesheets/video.scss
@@ -255,6 +255,10 @@
     padding-bottom: $elv-spacing-xxs;
   }
 
+  .bottom-left-controls {
+    gap: 15px;
+  }
+
   .video-volume-icon {
     height: $elv-font-l;
     margin-right: $elv-spacing-s;
@@ -294,22 +298,9 @@ select {
   border: 0;
   color: $color-foreground;
   left: $elv-spacing-xs;
-  width: 5rem;
+  width: auto;
 
   option {
     background-color: $color-background-active;
-  }
-
-  &.video-playback-rate {
-    width: 3.5rem;
-  }
-
-  &.video-playback-level {
-    margin-right: $elv-spacing-m;
-    width: 10rem;
-  }
-
-  &.offering-selection {
-    width: 10rem;
   }
 }
