--- a/src/static/stylesheets/base.scss
+++ b/src/static/stylesheets/base.scss
@@ -13,6 +13,11 @@ body {
 }
 
 .content {
+  background: var(--background-primary);
+  display: flex;
+  flex-direction: column;
+  gap: var(--gutter-size);
+  padding: var(--gutter-size);
   width: 100%;
 }
 
