--- a/src/static/stylesheets/modules/nav.module.scss
+++ b/src/static/stylesheets/modules/nav.module.scss
@@ -1,10 +1,12 @@
 .sidebar {
   align-items: center;
   background: var(--background-secondary);
+  border-radius: 0 var(--content-border-radius) 0 0;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  min-height: 100vh;
+  height: calc(100vh - var(--gutter-size));
+  margin-top: var(--gutter-size);
   padding: 25px 15px;
   width: max-content;
 
