--- a/src/static/stylesheets/variables.scss
+++ b/src/static/stylesheets/variables.scss
@@ -2,7 +2,12 @@
   --background-primary: #151515;
   --background-secondary: #1b1b1c;
   --background-active: #323233;
+  --background-toolbar: #29292D;
   --background-input: #1e1e1e;
+  --content-border-color: #222;
+  --content-border-radius: 10px;
+  --content-inline-padding: 20px;
+  --gutter-size: 10px;
   --spinner-color: #FFF;
   --spinner-color-background: red;
   --spinner-width: 5px;
