--- a/src/static/stylesheets/variables.scss
+++ b/src/static/stylesheets/variables.scss
@@ -7,7 +7,8 @@
   --content-border-color: #222;
   --content-border-radius: 10px;
   --content-inline-padding: 20px;
-  --gutter-size: 10px;
+  --gutter-size-x: 8px;
+  --gutter-size-y: 5px;
   --spinner-color: #FFF;
   --spinner-color-background: red;
   --spinner-width: 5px;
@@ -16,6 +17,7 @@
   --text-secondary: #BDBDBD;
   --text-tertiary: #7b7580;
   --text-disabled: #4b494e;
+  --text-highlight: #bc77ec;
   --table-border-color: #3B3B3B;
   --font-default: inter, system-ui, "Segoe UI", roboto, helvetica, arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   --font-monospace: "Chivo Mono", "Courier New", courier, monospace;
