--- a/src/static/stylesheets/modules/common.module.scss
+++ b/src/static/stylesheets/modules/common.module.scss
@@ -70,21 +70,54 @@
 
 
 .select {
-  user-select: none!important;
-
   &__input {
     background: transparent;
     border: 0;
+    color: var(--text-secondary);
     font-size: 16px;
     padding: 0;
     text-align: center;
-    user-select: none!important;
 
     &:disabled {
       background: transparent;
       color: var(--text-secondary);
-      cursor: pointer;
+      cursor: default;
       opacity: 1;
     }
+  }
+}
+
+.resize-handle {
+  background: var(--text-tertiary);
+  border-radius: 10px 0 0;
+  bottom: 0;
+  cursor: pointer;
+  height: 15px;
+  opacity: 0.5;
+  position: absolute;
+  right: 0;
+  transition: opacity 0.15s ease;
+  width: 15px;
+  z-index: 1;
+
+  &:hover,
+  &--active {
+    opacity: 1;
+    transition: opacity 0.5s ease;
+  }
+
+  &--horizontal {
+    height: 20px;
+    width: 12px;
+  }
+
+  &--vertical {
+    height: 12px;
+    width: 20px;
+  }
+
+  &__draggable {
+    height: 100%;
+    width: 100%;
   }
 }
