--- a/src/static/stylesheets/modules/side-panel.module.scss
+++ b/src/static/stylesheets/modules/side-panel.module.scss
@@ -1,18 +1,10 @@
 .side-panel-section {
   align-items: center;
   display: flex;
-  min-width: 15vw;
+  height: 100%;
   overflow: hidden;
   position: relative;
-
-  &__handle {
-    cursor: col-resize;
-    height: 100%;
-    position: absolute;
-    right: 0;
-    width: 5px;
-    z-index: 1;
-  }
+  width: 100%;
 
   &__header{
     font-size: 24px;
