--- a/src/static/stylesheets/modules/video.module.scss
+++ b/src/static/stylesheets/modules/video.module.scss
@@ -1,5 +1,8 @@
 /* Video Section */
 .video-section {
+  height: 100%;
+  max-height: 100%;
+  overflow: hidden;
   width: 100%;
 
   &__title {
@@ -17,19 +20,24 @@
   align-items: center;
   background: var(--background-secondary);
   display: flex;
-  height: 35vh;
+  flex: 1 1 0;
+  height: calc(100% - 90px);
   justify-content: center;
-  max-width: calc(100vw - 85px);
+  max-height: calc(100% - 90px);
   overflow: hidden;
   position: relative;
-  resize: vertical;
   width: 100%;
+
+  &--fullscreen {
+    background: #000;
+  }
 }
 
 .video-wrapper {
   display: flex;
   height: 100%;
   justify-content: center;
+  max-height: 100%;
   overflow: hidden;
   position: relative;
   width: 100%;
