--- a/src/static/stylesheets/modules/common.module.scss
+++ b/src/static/stylesheets/modules/common.module.scss
@@ -121,3 +121,120 @@
     width: 100%;
   }
 }
+
+.slider-container {
+  height: calc(var(--slider-height) + 1.8em);
+  width: 100%;
+
+  --slider-height: 20px;
+}
+
+.slider {
+  cursor: pointer;
+  position: relative;
+  width: 100%;
+
+  &__overlay {
+    height: var(--slider-height);
+    position: relative;
+    width: 100%;
+    z-index: 98;
+  }
+
+  &--active {
+    background-color: red;
+    height: var(--slider-height);
+    opacity: 0.7;
+    position: absolute;
+  }
+
+  &__active-indicator {
+    background-color: var(--text-highlight);
+    height: 100%;
+    opacity: 0.15;
+    position: absolute;
+  }
+
+  &__handle {
+    background-color: var(--text-highlight);
+    height: var(--slider-height);
+    position: absolute;
+    width: 2px;
+    z-index: 100;
+
+    &--active {
+      background-color: blue;
+    }
+
+    &--disabled {
+      pointer-events: none;
+    }
+
+    &--circle {
+      align-items: center;
+      background: transparent;
+      display: flex;
+      width: var(--slider-height);
+
+      &::after {
+        background: var(--text-highlight);
+        border-radius: 100%;
+        content: "";
+        height: 10px;
+        width: 10px;
+      }
+    }
+
+    &--arrow {
+      align-items: center;
+      background-color: transparent;
+      color: gray;
+      display: flex;
+      font-size: 16px;
+      justify-content: center;
+      margin-left: -8px;
+      padding-bottom: calc(var(--slider-height) / 2);
+      width: 1rem;
+    }
+  }
+
+  &__marks-container {
+    color: #333;
+    cursor: auto;
+    height: 20px;
+    position: relative;
+  }
+
+  &__mark {
+    display: flex;
+    font-size: 11px;
+    justify-content: center;
+    position: absolute;
+    transform: translateX(-50%);
+
+    &--passed {
+      color: #111;
+    }
+  }
+
+  &__mark-notch {
+    background-color: var(--text-tertiary);
+    height: calc(var(--slider-height) / 2);
+    margin-top: calc((-1 * var(--slider-height)) / 2);
+    position: absolute;
+    width: 1px;
+
+    &--major {
+      background-color: var(--text-secondary);
+      height: calc(var(--slider-height) / 1.3);
+      margin-top: calc((-1 * var(--slider-height)) / 1.3);
+    }
+  }
+
+  &__mark-text {
+    color: var(--text-secondary);
+    padding-top: 5px;
+    pointer-events: none;
+    user-select: none;
+  }
+}
