--- a/src/static/stylesheets/modules/timeline.module.scss
+++ b/src/static/stylesheets/modules/timeline.module.scss
@@ -1,21 +1,24 @@
 .timeline-section {
   height: 100%;
+  overflow: hidden;
   position: relative;
+  width: 100%;
 
   &__bottom-bar {
     bottom: 0;
+    box-shadow: 0 0 10px var(--background-primary);
     position: absolute;
     width: 100%;
+    z-index: 2;
   }
 
   &__content {
+    display: grid;
+    gap: 3px;
     max-height: calc(100% - 90px);
     min-height: 0;
     overflow-y: auto;
-  }
-
-  &__content-test {
-    height: 200vh;
+    position: relative;
   }
 }
 
@@ -23,4 +26,46 @@
   align-items: center;
   display: flex;
   gap: 10px;
+}
+
+.playhead-indicator {
+  background: var(--text-highlight);
+  box-shadow: 0 0 10px var(--text-disabled);
+  height: 100%;
+  position: absolute;
+  width: 2px;
+  z-index: 1;
+}
+
+.timeline-row {
+  background: var(--background-primary);
+  display: grid;
+  gap: 3px;
+  grid-template-columns: 200px 1fr;
+  height: 75px;
+  max-width: 100%;
+  overflow: hidden;
+  width: 100%;
+
+  &__label {
+    align-items: center;
+    background: var(--background-toolbar);
+    display: flex;
+    padding-inline: var(--content-inline-padding);
+  }
+
+  &__content {
+    background: var(--background-toolbar);
+  }
+}
+
+.seek-bar-container {
+  background: var(--background-primary);
+  height: max-content;
+  position: sticky;
+  top: 0;
+
+  &__spacer {
+    background: var(--background-primary);
+  }
 }
