--- a/src/static/stylesheets/modules/timeline.module.scss
+++ b/src/static/stylesheets/modules/timeline.module.scss
@@ -7,7 +7,8 @@
   &__bottom-bar {
     bottom: 0;
     box-shadow: 0 0 10px var(--background-primary);
-    position: absolute;
+    gap: 15px;
+    position: fixed;
     width: 100%;
     z-index: 2;
   }
@@ -61,6 +62,7 @@
 
 .seek-bar-container {
   background: var(--background-primary);
+  box-shadow: 0 0 10px var(--background-primary);
   height: max-content;
   position: sticky;
   top: 0;
